--- a/www/pdf/index.html
+++ b/www/pdf/index.html
@@ -3,4 +3,4 @@ title: "My Super Book"
 layout: pdf
 ---
 
-<iframe src="https://wiztigers.github.io/docgen-throwaway/book.pdf" width="100%" height="100%"></iframe>
+<iframe src="../book.pdf" width="100%" height="100%"></iframe>
