--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>Redirecting...</title>
 {% assign language = navigator.language || navigator.userLanguage %}
-{% if language contains 'fr' %}{{% assign location = '/fr/' %}}{% else %}{{% assign location = '/en/' %}}{% endif %}
+{% if language contains 'fr' %}{% assign location = '/fr/' %}{% else %}{% assign location = '/en/' %}{% endif %}
 {% assign redirect_url = {{ location }} | prepend: site.baseurl | prepend: site.url %}
 <link rel="canonical" href="{{ redirect_url }}">
 <meta http-equiv="refresh" content="0; url={{ redirect_url }}">
