--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- https://www.w3.org/TR/WCAG20-TECHS/H76.html -->
   <meta http-equiv="refresh" content="0; url={{ redirect_url }}">
   <link rel="canonical" href="{{ redirect_url }}">
-  <title>Redirecting...</title>
+  <title>Redirecting "{{ language }}"...</title>
 </head>
 <body>
   <h1>Redirecting to {{ redirect_url }}...</h1>
