debug redirect_fallback

--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,13 @@
   <a  id='redirect_fallback' href="./en/">Click here if you are not redirected.</a>
 
   <script>
+console.log('url1:"'+redirect_url+'"');
   document.getElementById('redirect_header').innerHTML="Redirecting to "+redirect_url+"...";
+console.log('url2:"'+redirect_url+'"');
+console.log('ref1:"'+document.getElementById('redirect_fallback').href+'"');
   document.getElementById('redirect_fallback').href=redirect_url;
+console.log('url3:"'+redirect_url+'"');
+console.log('ref2:"'+document.getElementById('redirect_fallback').href+'"');
   </script>
 
 </body>
